--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,5 @@
 {
-  "name": "renovate",
-  "description": "Automated dependency updates. Flexible so you don't need to be.",
-  "version": "0.0.0-semantic-release",
-  "dependencies": {
-    "xmldoc": "1.1.0",
-    "nock": "13.2.9"
-  }
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "rebaseWhen": "behind-base-branch",
+  "gitIgnoredAuthors": ["99875673+RahulGautamSingh-testing@users.noreply.github.com"]
 }
